fix alignment on blog list page

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -23,7 +23,6 @@
     &-meta {
       display: block;
       margin-left: auto;
-      padding: 10px 0 0 10px;
       @media (min-width: $bp-tablet) {
         display: inline-block;
       }
